Bug 1047149 - Add check to validate acquire fence of FB layer. r=sotaro