widget/gonk/libdisplay/FramebufferSurface.cpp
@@ -168,7 +168,11 @@ status_t FramebufferSurface::setReleaseFenceFd(int fenceFd) {
 }
 
 int FramebufferSurface::GetPrevFBAcquireFd() {
-  return mPrevFBAcquireFence.get() ? mPrevFBAcquireFence->dup() : -1;
+    if (mPrevFBAcquireFence.get() && mPrevFBAcquireFence->isValid()) {
+        return mPrevFBAcquireFence->dup();
+    }
+    ALOGE("GetPrevFBAcquireFd: FB acquire fence is invalid!");
+    return -1;
 }
 
 status_t FramebufferSurface::setUpdateRectangle(const Rect& r)
